--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -39,6 +39,7 @@
   font-size: 15px;
   letter-spacing: 1px;
   font-weight: 500;
+  white-space: nowrap;
 }
 .navbar-title {
   font-weight: 700;
@@ -61,7 +62,7 @@
     font-size: 16px;
   }
 }
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1200px) {
   .navbar-connect {
     display: block;
   }
